# fedora-lowlevel-settings

./: .gitignore  CMakeLists.txt  README.md
categories/: fcse-system-administration.desktop  fls-system-administration.desktop  nsa-system-administration.desktop
common/: CMakeLists.txt  backupmanager.cpp  backupmanager.h  configparser.cpp  configparser.h  dbushelper.cpp  dbushelper.h  statusnotifier.cpp  statusnotifier.h
docs/superpowers/plans/: 2026-04-07-fedora-core-setting-extension.md  2026-04-07-fedora-lowlevel-settings.md  2026-04-07-nsa-fedora-system-manager.md  2026-06-28-harden-helper.md
docs/superpowers/specs/: 2026-04-07-fedora-core-setting-extension-design.md  2026-04-07-fedora-lowlevel-settings-design.md  2026-04-07-nsa-fedora-system-manager-design.md  2026-06-28-harden-helper-design.md
helper/: CMakeLists.txt  fcse.actions  fcsehelper.cpp  fcsehelper.h  fls.actions  flshelper.cpp  flshelper.h  helperpolicy.cpp  helperpolicy.h  nsa-fsm.actions  nsafsmhelper.cpp  nsafsmhelper.h
kcms/: CMakeLists.txt
kcms/bootloader/: CMakeLists.txt  bootloaderkcm.cpp  bootloaderkcm.h  kcm_fcse_bootloader.json  kcm_fls_bootloader.json  kcm_nsa_bootloader.json
kcms/bootloader/ui/: main.qml
kcms/dnfrepos/: CMakeLists.txt  dnfreposkcm.cpp  dnfreposkcm.h  kcm_fcse_dnfrepos.json  kcm_fls_dnfrepos.json  kcm_nsa_dnfrepos.json
kcms/dnfrepos/ui/: main.qml
kcms/environment/: CMakeLists.txt  environmentkcm.cpp  environmentkcm.h  kcm_fcse_environment.json  kcm_fls_environment.json  kcm_nsa_environment.json
kcms/environment/ui/: main.qml
kcms/fstab/: CMakeLists.txt  fstabkcm.cpp  fstabkcm.h  kcm_fcse_fstab.json  kcm_fls_fstab.json  kcm_nsa_fstab.json
kcms/fstab/ui/: main.qml
kcms/hostname/: CMakeLists.txt  hostnamekcm.cpp  hostnamekcm.h  kcm_fcse_hostname.json  kcm_fls_hostname.json  kcm_nsa_hostname.json
kcms/hostname/ui/: main.qml
kcms/journal/: CMakeLists.txt  journalkcm.cpp  journalkcm.h  journalmodel.cpp  journalmodel.h  kcm_fcse_journal.json  kcm_fls_journal.json  kcm_nsa_journal.json
kcms/journal/ui/: main.qml
kcms/kernelmodules/: CMakeLists.txt  kcm_fcse_kernelmodules.json  kcm_fls_kernelmodules.json  kcm_nsa_kernelmodules.json  kernelmoduleskcm.cpp  kernelmoduleskcm.h
kcms/kernelmodules/ui/: main.qml
kcms/scheduledtasks/: CMakeLists.txt  kcm_fcse_scheduledtasks.json  kcm_fls_scheduledtasks.json  kcm_nsa_scheduledtasks.json  scheduledtaskskcm.cpp  scheduledtaskskcm.h
kcms/scheduledtasks/ui/: main.qml
kcms/security/: CMakeLists.txt  kcm_fcse_security.json  kcm_fls_security.json  kcm_nsa_security.json  securitykcm.cpp  securitykcm.h
kcms/security/ui/: main.qml
kcms/services/: CMakeLists.txt  kcm_fcse_services.json  kcm_fls_services.json  kcm_nsa_services.json  serviceskcm.cpp  serviceskcm.h  unitmodel.cpp  unitmodel.h
kcms/services/ui/: main.qml
kcms/swap/: CMakeLists.txt  kcm_fcse_swap.json  kcm_fls_swap.json  kcm_nsa_swap.json  swapkcm.cpp  swapkcm.h
kcms/swap/ui/: main.qml
kcms/sysctl/: CMakeLists.txt  kcm_fcse_sysctl.json  kcm_fls_sysctl.json  kcm_nsa_sysctl.json  sysctlkcm.cpp  sysctlkcm.h  sysctlmodel.cpp  sysctlmodel.h
kcms/sysctl/ui/: main.qml
tests/: CMakeLists.txt
tests/common/: test_backupmanager.cpp  test_configparser.cpp
tests/helper/: test_helperpolicy.cpp
