# KCM modules - subdirectories added as modules are implemented
add_subdirectory(journal)
add_subdirectory(services)
add_subdirectory(sysctl)
add_subdirectory(hostname)
add_subdirectory(bootloader)
add_subdirectory(fstab)
add_subdirectory(kernelmodules)
add_subdirectory(scheduledtasks)
add_subdirectory(security)
add_subdirectory(dnfrepos)
